My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -345,7 +345,7 @@
                                                 <label><b>Type of input</b></label>
                                             </div>
                                             <div class="col-md-4">
-                                                <select id="calculationType" name="calculationType" class="form-control" [(ngModel)]="fund.calculationType">
+                                                <select id="calculationType" name="calculationType" class="form-control" [(ngModel)]="fund.calculationType" (ngModelChange)="statisticsAutoCalculation()">
                                                     <option value="0" selected>Manual</option>
                                                     <option value="1">Auto calculation by PERFORMANCE</option>
                                                 </select>
