--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -26,7 +26,7 @@
             <a data-toggle="tab" href="#fund">FUND</a>
         </li>
         <li>
-            <a data-toggle="tab" href="#idd">IDD CALCULATION</a>
+            <a data-toggle="tab" href="#idd">IDD</a>
         </li>
         <li>
             <a data-toggle="tab" href="#netCashflow">NET CASHFLOW</a>
@@ -277,64 +277,64 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <div class="row">
-                                            <div class="col-md-2">
-                                                <label><b>Upload Gross Cash Flows</b></label>
-                                            </div>
-                                            <div class="col-md-1">
-                                                <a class="btn btn-info btn-sm" data-toggle="modal"
-                                                   data-target="#grossCfInputModal">
-                                                    <span class="glyphicon glyphicon-circle-arrow-up"></span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-2">
-                                                <label><b>Upload Net Cash Flows</b></label>
-                                            </div>
-                                            <div class="col-md-1">
-                                                <a class="btn btn-info btn-sm" data-toggle="modal"
-                                                   data-target="#netCfInputModal">
-                                                    <span class="glyphicon glyphicon-circle-arrow-up"></span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="modal fade" id="grossCfInputModal" role="dialog">
-                                                <div class="modal-dialog" style="overflow-y: scroll; max-height:85%; margin-top: 50px; margin-bottom: 50px;">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <textarea fz-elastic class="form-control" name="uploadedGrossCf" [(ngModel)]="uploadedGrossCf"></textarea>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
-                                                            <button type="button" class="btn btn-default pull-left" (click)="grossCfParse()" data-dismiss="modal" >Add</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="modal fade" id="netCfInputModal" role="dialog">
-                                                <div class="modal-dialog" style="overflow-y: scroll; max-height:85%; margin-top: 50px; margin-bottom: 50px;">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <textarea fz-elastic class="form-control" name="uploadedNetCf" [(ngModel)]="uploadedNetCf"></textarea>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
-                                                            <button type="button" class="btn btn-default pull-left" (click)="netCfParse()" data-dismiss="modal" >Add</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <!--<div class="row">-->
+                                            <!--<div class="col-md-2">-->
+                                                <!--<label><b>Upload Gross Cash Flows</b></label>-->
+                                            <!--</div>-->
+                                            <!--<div class="col-md-1">-->
+                                                <!--<a class="btn btn-info btn-sm" data-toggle="modal"-->
+                                                   <!--data-target="#grossCfInputModal">-->
+                                                    <!--<span class="glyphicon glyphicon-circle-arrow-up"></span>-->
+                                                <!--</a>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                        <!--<div class="row">-->
+                                            <!--<div class="col-md-2">-->
+                                                <!--<label><b>Upload Net Cash Flows</b></label>-->
+                                            <!--</div>-->
+                                            <!--<div class="col-md-1">-->
+                                                <!--<a class="btn btn-info btn-sm" data-toggle="modal"-->
+                                                   <!--data-target="#netCfInputModal">-->
+                                                    <!--<span class="glyphicon glyphicon-circle-arrow-up"></span>-->
+                                                <!--</a>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                        <!--<div class="row">-->
+                                            <!--<div class="modal fade" id="grossCfInputModal" role="dialog">-->
+                                                <!--<div class="modal-dialog" style="overflow-y: scroll; max-height:85%; margin-top: 50px; margin-bottom: 50px;">-->
+                                                    <!--<div class="modal-content">-->
+                                                        <!--<div class="modal-header">-->
+                                                            <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                                                        <!--</div>-->
+                                                        <!--<div class="modal-body">-->
+                                                            <!--<textarea fz-elastic class="form-control" name="uploadedGrossCf" [(ngModel)]="uploadedGrossCf"></textarea>-->
+                                                        <!--</div>-->
+                                                        <!--<div class="modal-footer">-->
+                                                            <!--<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>-->
+                                                            <!--<button type="button" class="btn btn-default pull-left" (click)="grossCfParse()" data-dismiss="modal" >Add</button>-->
+                                                        <!--</div>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                        <!--<div class="row">-->
+                                            <!--<div class="modal fade" id="netCfInputModal" role="dialog">-->
+                                                <!--<div class="modal-dialog" style="overflow-y: scroll; max-height:85%; margin-top: 50px; margin-bottom: 50px;">-->
+                                                    <!--<div class="modal-content">-->
+                                                        <!--<div class="modal-header">-->
+                                                            <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                                                        <!--</div>-->
+                                                        <!--<div class="modal-body">-->
+                                                            <!--<textarea fz-elastic class="form-control" name="uploadedNetCf" [(ngModel)]="uploadedNetCf"></textarea>-->
+                                                        <!--</div>-->
+                                                        <!--<div class="modal-footer">-->
+                                                            <!--<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>-->
+                                                            <!--<button type="button" class="btn btn-default pull-left" (click)="netCfParse()" data-dismiss="modal" >Add</button>-->
+                                                        <!--</div>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
                                     </form>
 
                                     <form [hidden]="openingSoon">
