--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -834,59 +834,67 @@
                                             </tr>
                                             <tr *ngFor="let performance of fund.companyPerformanceIdd">
                                                 <td>
-                                                    <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ()]{1,50}" [disabled]="true" #companyName="ngModel"/>
-                                                    <div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">
-                                                        Name must contain 1-50 characters A-Z, a-z, 0-9
-                                                    </div>
+                                                    {{performance.companyName}}
+                                                    <!--<input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ()]{1,50}" [disabled]="true" #companyName="ngModel"/>-->
+                                                    <!--<div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">-->
+                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #invested="ngModel"/>
-                                                    <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
-                                                        Only positive number could be entered
-                                                    </div>
+                                                    {{performance.invested}}
+                                                    <!--<input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #invested="ngModel"/>-->
+                                                    <!--<div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">-->
+                                                        <!--Only positive number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #realized="ngModel"/>
-                                                    <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
-                                                        Only positive number could be entered
-                                                    </div>
+                                                    {{performance.realized}}
+                                                    <!--<input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #realized="ngModel"/>-->
+                                                    <!--<div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">-->
+                                                        <!--Only positive number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #unrealized="ngModel"/>
-                                                    <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
-                                                        Only positive number could be entered
-                                                    </div>
+                                                    {{performance.unrealized}}
+                                                    <!--<input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #unrealized="ngModel"/>-->
+                                                    <!--<div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">-->
+                                                        <!--Only positive number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #totalValue="ngModel"/>
-                                                    <div [hidden]="totalValue.valid || totalValue.pristine" class="alert alert-danger">
-                                                        Only positive number could be entered
-                                                    </div>
+                                                    {{performance.totalValue}}
+                                                    <!--<input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #totalValue="ngModel"/>-->
+                                                    <!--<div [hidden]="totalValue.valid || totalValue.pristine" class="alert alert-danger">-->
+                                                        <!--Only positive number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #multiple="ngModel"/>
-                                                    <div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">
-                                                        Only positive number could be entered
-                                                    </div>
+                                                    {{performance.multiple}}
+                                                    <!--<input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #multiple="ngModel"/>-->
+                                                    <!--<div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">-->
+                                                        <!--Only positive number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #grossIrr="ngModel"/>
-                                                    <div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">
-                                                        Only number could be entered
-                                                    </div>
+                                                    {{performance.grossIrr}}
+                                                    <!--<input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #grossIrr="ngModel"/>-->
+                                                    <!--<div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">-->
+                                                        <!--Only number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
 
                                                 <td>
-                                                    <input type="text" class="form-control" name="netIrr" [(ngModel)]="performance.netIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #netIrr="ngModel"/>
-                                                    <div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">
-                                                        Only number could be entered
-                                                    </div>
+                                                    {{performance.netIrr}}
+                                                    <!--<input type="text" class="form-control" name="netIrr" [(ngModel)]="performance.netIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #netIrr="ngModel"/>-->
+                                                    <!--<div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">-->
+                                                        <!--Only number could be entered-->
+                                                    <!--</div>-->
                                                 </td>
                                             </tr>
                                         </table>
