--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -824,17 +824,17 @@
                                         <table class="table table-hover table-responsive" style="font-size: smaller">
                                             <tr>
                                                 <th>Company</th>
-                                                <th>Cash invested</th>
-                                                <th>Realized Proceeds</th>
-                                                <th>Unrealized Value</th>
-                                                <th>Total Value</th>
+                                                <th>Cash invested, mm</th>
+                                                <th>Realized Proceeds, mm</th>
+                                                <th>Unrealized Value, mm</th>
+                                                <th>Total Value, mm</th>
                                                 <th>Multiple</th>
-                                                <th>Gross IRR, %</th>
-                                                <th>Net IRR, %</th>
+                                                <th>Gross IRR</th>
+                                                <th>Net IRR</th>
                                             </tr>
                                             <tr *ngFor="let performance of fund.companyPerformanceIdd">
                                                 <td style="font-size: small">
-                                                    {{performance.companyName | }}
+                                                    {{performance.companyName}}
                                                     <!--<input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ()]{1,50}" [disabled]="true" #companyName="ngModel"/>-->
                                                     <!--<div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">-->
                                                         <!--Name must contain 1-50 characters A-Z, a-z, 0-9-->
@@ -842,7 +842,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.invested}}
+                                                    {{(performance.invested/1000000) | number:'1.1-2'}}
                                                     <!--<input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #invested="ngModel"/>-->
                                                     <!--<div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">-->
                                                         <!--Only positive number could be entered-->
@@ -850,7 +850,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.realized}}
+                                                    {{(performance.realized/1000000) | number:'1.1-2'}}
                                                     <!--<input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #realized="ngModel"/>-->
                                                     <!--<div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">-->
                                                         <!--Only positive number could be entered-->
@@ -858,7 +858,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.unrealized}}
+                                                    {{(performance.unrealized/1000000) | number:'1.1-2'}}
                                                     <!--<input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #unrealized="ngModel"/>-->
                                                     <!--<div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">-->
                                                         <!--Only positive number could be entered-->
@@ -866,7 +866,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.totalValue}}
+                                                    {{(performance.totalValue/1000000) | number:'1.1-2'}}
                                                     <!--<input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #totalValue="ngModel"/>-->
                                                     <!--<div [hidden]="totalValue.valid || totalValue.pristine" class="alert alert-danger">-->
                                                         <!--Only positive number could be entered-->
@@ -874,7 +874,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.multiple}}
+                                                    {{performance.multiple | number:'1.0-2'}}x
                                                     <!--<input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #multiple="ngModel"/>-->
                                                     <!--<div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">-->
                                                         <!--Only positive number could be entered-->
@@ -882,7 +882,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.grossIrr}}
+                                                    {{performance.grossIrr | number:'1.0-2'}}%
                                                     <!--<input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #grossIrr="ngModel"/>-->
                                                     <!--<div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">-->
                                                         <!--Only number could be entered-->
@@ -890,7 +890,7 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.netIrr}}
+                                                    {{performance.netIrr | number:'1.0-2'}}%
                                                     <!--<input type="text" class="form-control" name="netIrr" [(ngModel)]="performance.netIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #netIrr="ngModel"/>-->
                                                     <!--<div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">-->
                                                         <!--Only number could be entered-->
