--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -664,6 +664,9 @@
                                     <div class="col-md-12">
                                         <div class="row">
                                             <div class="col-md-12">
+                                                <div class="pull-left">
+                                                    {{this.performanceSaveTypeMessage}}
+                                                </div>
                                                 <div class="pull-right">
                                                     <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePerformance()" [disabled]="fund.id == 0 || fund.id == null">
                                                         SAVE
