--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -364,39 +364,47 @@
                                             <table class=" col-md-3 table-striped table-condensed">
                                                 <tr>
                                                     <td class="col-md-3"><b>Number of investments</b></td>
-                                                    <td class="col-md-3"><input style="width: 100%" type="text" name="numberOfInv" [(ngModel)]="fund.numberOfInvestments" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #numOfInv="ngModel"/>
+                                                    <td class="col-md-3" *ngIf="fund.calculationType == 0"><input style="width: 100%" type="text" name="numberOfInv" [(ngModel)]="fund.numberOfInvestments" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #numOfInv="ngModel"/>
                                                         <div [hidden]="numOfInv.valid || numOfInv.pristine" class="alert alert-danger">
                                                             Only positive number could be entered
                                                         </div>
                                                     </td>
-                                                    <!--<td class="col-md-2">{{fund.numberOfInvestments}}</td>-->
+                                                    <td class="col-md-3" *ngIf="fund.calculationType != 0">
+                                                        {{fund.numberOfInvestments}}
+                                                    </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="col-md-3"><b>Invested amount</b></td>
-                                                    <td class="col-md-3"><input style="width: 100%" type="text" name="invested" [(ngModel)]="fund.investedAmount" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #invested="ngModel"/>
+                                                    <td class="col-md-3" *ngIf="fund.calculationType == 0"><input style="width: 100%" type="text" name="invested" [(ngModel)]="fund.investedAmount" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #invested="ngModel"/>
                                                         <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
                                                             Only positive number could be entered
                                                         </div>
                                                     </td>
-                                                    <!--<td class="col-md-2">{{fund.investedAmount}}</td>-->
+                                                    <td class="col-md-3" *ngIf="fund.calculationType != 0">
+                                                        {{(fund.investedAmount/1000000) | number:'1.1-2'}}m
+                                                    </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="col-md-3"><b>Realized amount</b></td>
-                                                    <td class="col-md-3"><input style="width: 100%" type="text" name="realized" [(ngModel)]="fund.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #realized="ngModel"/>
+                                                    <td class="col-md-3" *ngIf="fund.calculationType == 0"><input style="width: 100%" type="text" name="realized" [(ngModel)]="fund.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #realized="ngModel"/>
                                                         <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
                                                             Only positive number could be entered
                                                         </div>
                                                     </td>
-                                                    <!--<td class="col-md-2">{{fund.realized}}</td>-->
+                                                    <td class="col-md-3" *ngIf="fund.calculationType != 0">
+                                                        {{(fund.realized/1000000) | number:'1.1-2'}}m
+                                                    </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="col-md-3"><b>Unrealized amount</b></td>
-                                                    <td class="col-md-3"><input style="width: 100%" type="text" name="unrealized" [(ngModel)]="fund.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #unrealized="ngModel"/>
+                                                    <td class="col-md-3" *ngIf="fund.calculationType == 0"><input style="width: 100%" type="text" name="unrealized" [(ngModel)]="fund.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.calculationType != 0" #unrealized="ngModel"/>
                                                         <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
                                                             Only positive number could be entered
                                                         </div>
                                                     </td>
-                                                    <!--<td class="col-md-2">{{fund.unrealized}}</td>-->
+                                                    <td class="col-md-3" *ngIf="fund.calculationType != 0">
+                                                        {{(fund.unrealized/1000000) | number:'1.1-2'}}m
+                                                    </td>
                                                 </tr>
                                             </table>
                                             <table class=" col-md-3 table-striped table-condensed">
