My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -724,7 +724,7 @@
                                                     </div>
                                                 </td>
                                                 <td *ngIf="performance.autoCalculation == true">
-                                                    {{performance.totalValue/1000000) | number:'1.1-2'}}m
+                                                    {{(performance.totalValue/1000000) | number:'1.1-2'}}m
                                                 </td>
 
                                                 <td>
