My new message 3

--- a/nicnbk-ui-angular2/public/css/common.css
+++ b/nicnbk-ui-angular2/public/css/common.css
@@ -78,3 +78,8 @@ label {
     padding: 0px !important;
     text-align: center !important;
 }
+
+.middleTDTable td{
+    text-align: center;
+    vertical-align: middle;
+}
