--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -674,7 +674,7 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                        <table class="table table-hover table-responsive table-condensed middleTDTable" style="font-size: smaller">
                                             <tr>
                                                 <th>Company</th>
                                                 <th>Cash invested</th>
